Fix TopNavBar dropdown z-index.

--- a/src/components/sidenavbar/SideNavBar.css
+++ b/src/components/sidenavbar/SideNavBar.css
@@ -22,19 +22,15 @@
 .sidenavbar {
   flex: 1;
   height: calc(100vh - 65px);
-  background-color: rgb(255, 134, 191);
   position: sticky;
-  /* border-top: solid #ff86bf 10px; */
-  /* border-bottom: solid #fdfbfe 10px; */
   border-bottom-right-radius: 10px;
 
-  z-index: 15;
+  z-index: 11;
   padding-top: 10px;
   background: rgba(255, 134, 191, 0.75);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(0px);
   -webkit-backdrop-filter: blur(0px);
-  /* border-radius: 10px; */
   border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
